--- a/2020/心理学与生活.md
+++ b/2020/心理学与生活.md
@@ -3,3 +3,8 @@
 
 一个具有批判性的思考着要超越已有的信息，发掘隐藏的光鲜表面下的真正内涵，以理解事物的本质为目标，而不被形式和表象所迷惑。
 
+情绪智力包括四种主要成分：
+- 准确和适当地知觉、评价和表达情感的能力
+- 运用情绪来促进思维的能力
+- 理解和分析情绪、有效地运用情绪知识的能力
+- 调节和管控情绪，以促进情绪和智力发展的能力
