--- a/2021/shengcairili/重要摘抄.md
+++ b/2021/shengcairili/重要摘抄.md
@@ -13,3 +13,12 @@
 2.知乎写作法：从用户提出的问题开始入手
 3.豆瓣写作法：列出所属领域的专属书单
 4.查理芒格写作法：多元思维模型，可以建立至少100个思维模型。
+
+
+--
+进入一个行业，快速学习的方法是：标杆学习。
+
+找出这个领域做成功的人，研究他做对了什么，掉了哪些坑，哪些是自己在目前这个阶段可以模仿的，哪些教训是需要避免的。
+
+标杆无需太高，挑一挑够得着就好。研究数亿身家的李嘉诚和马云，不如研究生财有术里的高手，如果赚到第一个十万、第一个一百万、第一个一千万。
+
