--- a/2021/shengcairili/重要摘抄.md
+++ b/2021/shengcairili/重要摘抄.md
@@ -15,10 +15,42 @@
 4.查理芒格写作法：多元思维模型，可以建立至少100个思维模型。
 
 
---
+---
 进入一个行业，快速学习的方法是：标杆学习。
 
 找出这个领域做成功的人，研究他做对了什么，掉了哪些坑，哪些是自己在目前这个阶段可以模仿的，哪些教训是需要避免的。
 
 标杆无需太高，挑一挑够得着就好。研究数亿身家的李嘉诚和马云，不如研究生财有术里的高手，如果赚到第一个十万、第一个一百万、第一个一千万。
+
+---
+定位非常非常重要，索要放在第一条说。定位是1，其他的事情都是后面的0.
+
+瞎写也有复利，但写一段时间，你会发现难赚钱，慢慢就没有信心继续写了。明确定位的写作，便于后续做成内容产品，便于为自己打造标签，便于制造成就事件，产生滚雪球效应。写作是有复利的，尤其是“集中一个主题、带着框架、切分知识点去写作”，把这个主题写透，发在多平台给更多人看，并把写的做成不同内容产品（一鱼多吃），复利非常大。
+
+---
+《红楼梦》第五回写道，宁府中贴着一副对联：世事洞明皆学问，人情练达即文章。
+
+只要我们用心，从你所接触的材料，不管来自人、事、网、书哪种信息源，都可以从中琢磨出能学习的地方，以及思考如何应用在我们手头的事情上。
+---
+坚信你做的事情一定会成功，你才有动力行动，你才会在遇到挫折的时候有坚持下去的动力。
+这就是相信的力量。
+
+---
+我们只有看足够多赚钱案例，并且深入思考，记在大脑里。以后如果遇到新的案例（需求、场、产品），我们才能从已有记忆里，提取出对应的解决方案，做出有效行动：
+
+1.开眼（多看）
+2.复制（模仿）
+3.贯通（改进）
+
+上面3步，是培养赚钱能力的一个大框架，大家按照这个思路练习，能加快成功速度。
+---
+商业的逻辑是简单的，不要想得太复杂了，五花八门的技巧容易把自己绕进去。
+
+销售额=流量 x 转化率 x 客单价 x 购买次数，这就是万能的赚钱公式，一切动作要考虑是否围绕这四个要素了来做，如果没做，那可能你做的是无用功。
+---
+做一个有作品的人。
+
+什么叫作品？就是它花费了你大量心血能拿出来让人惊叹的东西，它可以是一个项目、一篇文章、一次演讲，作品的特点就是能让人啧啧称赞、有传播性的东西。
+
+这一点非常重要，很多人每天工作也非常努力，投入了大量精力，但由于过于分散，因此做出来很多平庸的东西，最终没有人记住你的产出。
 
