--- a/2021/shengcairili/重要摘抄.md
+++ b/2021/shengcairili/重要摘抄.md
@@ -54,3 +54,7 @@
 
 这一点非常重要，很多人每天工作也非常努力，投入了大量精力，但由于过于分散，因此做出来很多平庸的东西，最终没有人记住你的产出。
 
+---
+难走的路从来都不拥挤。
+
+Google SEO 可以说是最困难的一种方法，但是他的回报也是巨大的，从几倍或几十倍，到无天花板的回报。你想要巨大的回报，就得选择走困难的路。
