--- a/2021/shengcairili/重要摘抄.md
+++ b/2021/shengcairili/重要摘抄.md
@@ -47,6 +47,13 @@
 商业的逻辑是简单的，不要想得太复杂了，五花八门的技巧容易把自己绕进去。
 
 销售额=流量 x 转化率 x 客单价 x 购买次数，这就是万能的赚钱公式，一切动作要考虑是否围绕这四个要素了来做，如果没做，那可能你做的是无用功。
+
+不管是个人品牌，还是内容创业、自媒体，说到底，只要你想靠它赚钱，那本质上就是一门生意。
+
+生意就要按照生意的逻辑来考考虑，不要被情怀给迷惑了。生意的底层逻辑是一个赚钱公式：销售额 = 流量 x 转化率 x 客单价 x 购买次数。
+
+内容是为了引流，个人品牌是为了帮助转化，产品显示为了提升客单价，与游湖互动送礼是为了购买次数。如果你做的事情，没有针对四要素其中某一个，那很可能就是无用功。
+
 ---
 做一个有作品的人。
 
