--- a/2021/shengcairili/重要摘抄.md
+++ b/2021/shengcairili/重要摘抄.md
@@ -65,3 +65,18 @@
 难走的路从来都不拥挤。
 
 Google SEO 可以说是最困难的一种方法，但是他的回报也是巨大的，从几倍或几十倍，到无天花板的回报。你想要巨大的回报，就得选择走困难的路。
+
+---
+不要把简单的事情想复杂。
+
+你只需要一个装满5000好友的微信号，并让这些人都信任你。忘掉套路，忘掉运营技巧，忘掉工具，忘掉产品，跟他们做朋友，帮他忙解决问题，卖有价值的东西给他们，持续去做。
+
+年入千万不是没有可能。
+---
+对自媒体来说，一切眼花缭乱的事情，所有层出不穷的玩法，最根本的是什么？大量、持续、精准的流量。
+
+流量的根本是什么？持续输出优质的原创作品。
+
+首先是输出，秀出来，不闷在手里；其次是持续，让读者可预期；再次是优质，打磨作品为经典。
+
+在此过程中，除了流量，还要聚焦一个领域，突出品牌标签。
