--- a/2021/shengcairili/重要摘抄.md
+++ b/2021/shengcairili/重要摘抄.md
@@ -80,3 +80,10 @@ Google SEO 可以说是最困难的一种方法，但是他的回报也是巨大
 首先是输出，秀出来，不闷在手里；其次是持续，让读者可预期；再次是优质，打磨作品为经典。
 
 在此过程中，除了流量，还要聚焦一个领域，突出品牌标签。
+
+---
+
+投资是一生的命题，越早接触投资越好。
+
+学者去判断市场的趋势，学着去判断资产的价值，学着去判断商业模式的演变，慢慢的它回个你一个新视角，让你从更加宏观的角度去审视产业链环节和行业发展阶段。
+
