--- a/2021/shengcairili/重要摘抄.md
+++ b/2021/shengcairili/重要摘抄.md
@@ -28,6 +28,12 @@
 瞎写也有复利，但写一段时间，你会发现难赚钱，慢慢就没有信心继续写了。明确定位的写作，便于后续做成内容产品，便于为自己打造标签，便于制造成就事件，产生滚雪球效应。写作是有复利的，尤其是“集中一个主题、带着框架、切分知识点去写作”，把这个主题写透，发在多平台给更多人看，并把写的做成不同内容产品（一鱼多吃），复利非常大。
 
 ---
+
+相比杂乱无章的内容，做垂直领域内容的四点好处
+
+
+
+---
 《红楼梦》第五回写道，宁府中贴着一副对联：世事洞明皆学问，人情练达即文章。
 
 只要我们用心，从你所接触的材料，不管来自人、事、网、书哪种信息源，都可以从中琢磨出能学习的地方，以及思考如何应用在我们手头的事情上。
@@ -87,3 +93,24 @@ Google SEO 可以说是最困难的一种方法，但是他的回报也是巨大
 
 学者去判断市场的趋势，学着去判断资产的价值，学着去判断商业模式的演变，慢慢的它回个你一个新视角，让你从更加宏观的角度去审视产业链环节和行业发展阶段。
 
+---
+
+在知乎上创作优质内容
+
+1.根据自己的实际情况来创作，“我手写我心”，创作不是胡编乱造，而是根据你平时工作中掌握的实际情况来写。
+2.选用盘点型结构来答题
+3.文章开头要有吸引了
+4.能配图的地方尽量配图，干货类文章容易给人枯燥的感觉，配上图片可以很好地解决这个问题
+5.调用用户的情绪，有意识地将一些知识点描述得有趣味。
+
+--- 
+如何通过VideoScribe制作原创视频赚钱
+
+VideoScribe里有很多卡通动画，借此制作视频相对比较简单。主要就是写好剧本，然后按照剧本增加图片，合成动画。内容可以是：思维提升，生活感悟相关，哥哥垂直领域的视频。
+
+如何赚钱？
+1.视频号+公众号投广告
+2.视频号+公众号带货
+3.给公众号倒流
+4.视频教学培训
+5.卖号
