--- a/2021/shengcairili/重要摘抄.md
+++ b/2021/shengcairili/重要摘抄.md
@@ -31,7 +31,12 @@
 
 相比杂乱无章的内容，做垂直领域内容的四点好处
 
+1.能让你定位明确
+2.能让你的内容和品牌具有识别度
+3.能让你容易开发出产品
+4.能让你成为一个领域的专家，带来影响力
 
+这是不是做自媒体、个人品牌、社群、培训等领域的人，最“痛”的四个诉求？
 
 ---
 《红楼梦》第五回写道，宁府中贴着一副对联：世事洞明皆学问，人情练达即文章。
