--- a/2021/蔡骏24堂写作课.md
+++ b/2021/蔡骏24堂写作课.md
@@ -107,6 +107,40 @@
 
 伏笔，就是难以被察觉到的暗示和线索。
 
+怎样制作伏笔
+- 让伏笔得以前后照应
+  - 故事逻辑性合理
+- 用文学梗来做伏笔
+- 将细节当做伏笔
+
+#### 第10堂课，好的结尾是留白艺术
+
+顺理成章的结尾才是好结局。
+
+- 抒情式的结尾
+  - 一定要恰到好处，情感一定要克制。
+- 悬而未决的结尾
+
+好的结尾一定是留有余韵，千万不要把所有情节、情感都托盘而出，要给读者留着一定的空白。
+
+## 第三部分，写作进阶与提升
+
+#### 第11堂课，所有的初稿都是无法直视的
+
+写小说就是修改小说，修改小说就是一个辨别与完善的过程。
+
+如何去修改小说?
+1. 通读原告，让人物与小说整体气质相吻合
+  - 看故事中有没有不符合逻辑的地方，有没有前后矛盾之处。把这些找出来，进行修订，尽量让故事逻辑完整。
+2. 当弃则弃，果断改写
+  - 有更好想法或方案的时候，可以果断地放弃原稿，重新写作。
+  - 放弃的文字，也要留好，说不定会在写其他故事的时候有用处。
+3. 重视小说大纲，把以往的细节补起来
+  - 小说大纲的重要性，就是让读者掌握小说的整体，比如故事推进的节奏、人物性格的塑造
+  - 如果写出来的作品与大纲有偏离，则对比考量一下。如果大纲好，则按照大纲去修改。如果现在的作品好，大纲当弃则弃。
+
+
+
 
 
 
