--- a/2021/蔡骏24堂写作课.md
+++ b/2021/蔡骏24堂写作课.md
@@ -139,6 +139,27 @@
   - 小说大纲的重要性，就是让读者掌握小说的整体，比如故事推进的节奏、人物性格的塑造
   - 如果写出来的作品与大纲有偏离，则对比考量一下。如果大纲好，则按照大纲去修改。如果现在的作品好，大纲当弃则弃。
 
+#### 第12堂课，取舍有道
+
+- 取舍首先是对写作道路的选择
+  - 文章的改删、重写，调整。
+- 取舍就是想明白怎么写
+  - 技术问题：开头怎么写，主人公怎么怵场，哪种叙述人称，单双先叙述？
+  - 契诃夫短篇小说学习参考：人物的素描、情节的安排，令人惊叹
+- 取舍是看你为写作放弃什么
+  - 你肯为写作放弃多少时间，能在上面投入多少精力
+
+#### 第13堂课，感同身受
+
+- 制造共鸣
+  - 一个号的人物形象，一个好的故事，肯定会让读者产生情感寄托。读者会体会人物的喜怒哀乐。
+- 让小说更具泪点
+  - 用细节来强化意境
+  - 学会使用心理独白
+  - 加强代入感
+
+#### 第14堂课，每个人都有故事和素材
+
 
 
 
