--- a/2021/蔡骏24堂写作课.md
+++ b/2021/蔡骏24堂写作课.md
@@ -160,6 +160,56 @@
 
 #### 第14堂课，每个人都有故事和素材
 
+如何处理生活中的小说素材
+- 让日常生活陌生化
+  - 陌生化处理这个文学中的理论，把平常变得不平常，从而增加新鲜感和陌生感
+- 学会操控时间和记忆
+- 让记忆与现实产生碰撞
+  - 赋予记忆现实意义
+
+#### 第15堂课，敏感对于写作是优秀的品质
+
+保持敏感是最大的写作秘诀。敏感可以使你时刻注意，让你总是可以沉浸在某种思绪之中。
+
+在写作中保持敏感
+- 保持对素材的敏感，追问背后的意义
+ - 学会思考与追问：素材应该表达什么？应该用什么技巧去叙述？它和现实的联系在哪里？
+- 敏感就是要学会感同身受
+  - 把自我感情、思考投射到作品中去
+
+#### 第16堂课，小说最不能缺失的是风格
+
+如何让作品有新意
+- 打破写作内容的限制
+  - 拥有属于自己的风格和气质，找到属于自己的写作内容
+  - 素材可以是大众的，但写作的内容和方式一定要属于自己
+- 打破表达方式的限制
+  - 放开手脚，解放我们的表达方式，不拘泥于传统的叙述方式
+- 勇敢地构建你自己的世界
+  - 通过写作不断地完善自己对世界、对自我的认识
+
+#### 第17堂课，成为好作家的关键词
+
+积累，好书烂书都要读，读好书是学习和借鉴，读烂书是学习避免写烂。
+
+积累就是阅读，如何阅读？
+- 文本细读
+  - 反复阅读
+  - 有限的时间里，搞清楚文本的写作技巧、作者的谋篇布局，这样可以快速地提升自己的写作能力
+- 目的性阅读
+- 烂书也要读（谨慎实践）
+  - 可以提前吸取烂的教训，避免同样的错误
+
+#### 第18堂课，从模仿到字数限定，方法比态度更重要
+
+写作就是不断地练习，打开电脑，不断地写。
+
+- 模仿名家的练习
+  - 模仿是写作的一个必经阶段，更是一个宝贵的学习过程。
+  - 模仿名家的笔法，把他们的句式、故事烂熟于心，会提升自己的写作能力。
+
+TODO
+
 
 
 
