--- a/2021/蔡骏24堂写作课.md
+++ b/2021/蔡骏24堂写作课.md
@@ -205,10 +205,44 @@
 写作就是不断地练习，打开电脑，不断地写。
 
 - 模仿名家的练习
-  - 模仿是写作的一个必经阶段，更是一个宝贵的学习过程。
+  - 模仿是写作的一个必经阶段，更是一个宝贵的学习过程。经历过这个阶段后，作者才会走向成熟，文字才会稳定。
   - 模仿名家的笔法，把他们的句式、故事烂熟于心，会提升自己的写作能力。
+- 在限定的字数里完成故事
+  - 叙述能力是基本功
+  - 叙述能力的提升方法：在限定的字数里，尝试把故事讲完。
+- 态度与灵感的问题
+  - 除了灵感之外，最重要的是自律和勤奋
+  - 海明威的写作小技巧：每天写特定的字数，不管今天的写作状态如何，字数到了，立刻放下笔，下一部分留着明天写。
+- 在写作中感受快乐
+  - 刻苦地写作是痛苦的、反人性的，想要持续写作，最好从内心深处喜欢写作，并能从中感受到快乐
 
-TODO
+
+#### 第19堂课，写作是场马拉松，热爱和激情缺一不可
+
+乔治.奥威尔的《我为什么写作》中提到的四种动机：
+- 纯粹的个人主义
+- 美学的热忱
+- 历史的责任感
+- 政治的目的
+
+如何始终保持写作的激情？
+- 抓住表达的渴望
+  - 把自己任何时刻想说的话都记录下来
+  - 随时保持对生活的感受能力，并随时随地记录自己的灵感，写下所能创造出的好句子。
+- 保持冒险精神
+  - 跳出自己的舒适区，不断学习和尝试新的东西
+- 要有强大的自律精神
+  - 明确一个目标
+    - 一年写10万字？
+    - 每月写两个短片小说？
+  - 制定一个写作计划
+    - 每天写多少？
+    - 每周完成多少？
+
+#### 第20堂课，专注就是专注写作本身
+
+
+
 
 
 
