--- a/2021/蔡骏24堂写作课.md
+++ b/2021/蔡骏24堂写作课.md
@@ -241,6 +241,68 @@
 
 #### 第20堂课，专注就是专注写作本身
 
+专注是一种态度，专注就是专注写作本身。
+
+进入专注的写作状态的技巧：
+- 专注于故事背后的材料
+  - 积极主动地区寻找灵感、去思考更多的问题
+  - 当明确自己想要写的故事后，一定要尽最大努力去搜集资料
+  - 把注意力集中于材料中，积极主动地去挖掘出属于自己的故事
+- 专注于想要呈现的故事
+  - 一旦确定了故事的基调，全力以赴地去完成
+  - 写作最快的捷径就是专注、认真地写
+- 专注要关注人物
+  - 小说最有价值的地方就是人物
+  - 成功塑造一个人物，至少会让你的作品成功大半
+
+#### 第21堂课，现实是最精彩的小说，人生是最大的悬疑
+
+如何观察日常生活？
+- 记录你所观察的人和事
+  - 随时随地拿出手机，把一些有意思的事情速写下来
+  - 速写的好处就是锻炼、提高自己的文字水平
+- 观察就是从普通走向特别
+  - 观察生活中的点点滴滴，从普通生活中找到那些特别的事物和感受，构造出更符合小说情节和主旨要求的事物和形象
+- 用想象力穿越现实之墙
+  
+#### 第22堂课，写作是理智与情感的抗衡
+
+写作要有激情，也要冷静，写作就是理智与情感的抗衡。
+
+- 用激情打败平凡
+  - 作家的生活也很单调，写作一旦深入进去，将充满激情
+- 理智与情感同样重要
+  - 写作最重要的是由内而外的强烈的写作欲望，而非外部的时间地点环境等这些条件
+  - 情感意味着你的故事灵感，理智就是你的自律
+- 冷静是找到最合适的内容
+  - 理性冷静地看待自己因激情而产生的想法，判断它到底是多余，还是杰作
+
+#### 第23堂课，写作是一场漫长而又需自律的马拉松
+
+如何保持自律？
+- 健康的生活状态
+  - 合理安排自己的生活作息、管理好自己的身体健康
+- 学会分辨消遣和消耗
+  - 适度消遣，杜绝消耗
+  - 消遣就是疲惫之余的放松，最好这种消遣能对写作有间接的帮助
+  - 消耗就是消费精力和意志力的事情，并且这种事情对写作没有任何帮助
+- 学会自己给自己打气
+  - 遇到不顺，坚定自己，给自己打气
+
+#### 第24堂课，好的小说一定能给人带来启示
+
+小说的责任：
+- 要关注并反思现实
+  - 洞察更多的现实真像，引领渎职走向更为清醒和智慧的人生
+- 展示健康的生活态度
+  - 健康的生活态度，能感受到生活之美，促使我们奋发向上
+- 找到独特的角度
+  - 让自己的文字高度风格化，让读者一眼就能读出，这就是我写的
+  - 不能让自己的作品沦为同类作品的重复
+  - 洞见生活中那些大多数人难以察觉的风情
+
+
+
 
 
 
