--- a/2021/蔡骏24堂写作课.md
+++ b/2021/蔡骏24堂写作课.md
@@ -188,7 +188,7 @@
 - 勇敢地构建你自己的世界
   - 通过写作不断地完善自己对世界、对自我的认识
 
-#### 第17堂课，成为好作家的关键词
+#### 第17堂课，【积累】成为好作家的关键词
 
 积累，好书烂书都要读，读好书是学习和借鉴，读烂书是学习避免写烂。
 
@@ -200,7 +200,7 @@
 - 烂书也要读（谨慎实践）
   - 可以提前吸取烂的教训，避免同样的错误
 
-#### 第18堂课，从模仿到字数限定，方法比态度更重要
+#### 第18堂课，【练习】从模仿到字数限定，方法比态度更重要
 
 写作就是不断地练习，打开电脑，不断地写。
 
@@ -217,7 +217,7 @@
   - 刻苦地写作是痛苦的、反人性的，想要持续写作，最好从内心深处喜欢写作，并能从中感受到快乐
 
 
-#### 第19堂课，写作是场马拉松，热爱和激情缺一不可
+#### 第19堂课，【热爱】写作是场马拉松，热爱和激情缺一不可
 
 乔治.奥威尔的《我为什么写作》中提到的四种动机：
 - 纯粹的个人主义
@@ -239,7 +239,7 @@
     - 每天写多少？
     - 每周完成多少？
 
-#### 第20堂课，专注就是专注写作本身
+#### 第20堂课，【专注】专注就是专注写作本身
 
 专注是一种态度，专注就是专注写作本身。
 
@@ -255,7 +255,7 @@
   - 小说最有价值的地方就是人物
   - 成功塑造一个人物，至少会让你的作品成功大半
 
-#### 第21堂课，现实是最精彩的小说，人生是最大的悬疑
+#### 第21堂课，【观察】现实是最精彩的小说，人生是最大的悬疑
 
 如何观察日常生活？
 - 记录你所观察的人和事
@@ -265,7 +265,7 @@
   - 观察生活中的点点滴滴，从普通生活中找到那些特别的事物和感受，构造出更符合小说情节和主旨要求的事物和形象
 - 用想象力穿越现实之墙
   
-#### 第22堂课，写作是理智与情感的抗衡
+#### 第22堂课，【理智】写作是理智与情感的抗衡
 
 写作要有激情，也要冷静，写作就是理智与情感的抗衡。
 
@@ -277,7 +277,7 @@
 - 冷静是找到最合适的内容
   - 理性冷静地看待自己因激情而产生的想法，判断它到底是多余，还是杰作
 
-#### 第23堂课，写作是一场漫长而又需自律的马拉松
+#### 第23堂课，【自律】写作是一场漫长而又需自律的马拉松
 
 如何保持自律？
 - 健康的生活状态
@@ -289,7 +289,7 @@
 - 学会自己给自己打气
   - 遇到不顺，坚定自己，给自己打气
 
-#### 第24堂课，好的小说一定能给人带来启示
+#### 第24堂课，【责任】好的小说一定能给人带来启示
 
 小说的责任：
 - 要关注并反思现实
