--- a/olds/《这才是心理学》.md
+++ b/olds/《这才是心理学》.md
@@ -1,1 +1,175 @@
+### 《这才是心理学-第九版（How to Think Straight about Psychology 9th edition）》
+
+心理学是一门科学，必然要遵循下面三条科学的标准：
+
+* 研究的必须是实证可解的问题
+* 方法上要遵循系统的实证主义
+* 研究结论要能够被重复验证，并能经过同行评议获得认可
+
+这三条标准也是区分科学心理学与伪心理学的分水岭。
+
+心理学的研究因此也与操作性定义、实验组和控制组、变量控制、数据统计等词汇联系起来，而不是个人化的体验和感悟，头脑风暴或纯粹的逻辑推导。
+
+#### 第一章 心理学充满生机
+
+心理学是一门独立的学科，原因有两条：
+* 心理学研究采用科学方法来探究人类及动物的所有行为
+* 从这一知识衍生出的实际应用是具备科学基础的
+
+心理学的首要特征：它是有关行为的、以数据为基础的科学研究。
+
+心理学是科学研究，那什么是科学？
+
+科学，是一种思考和观察事物以便深入理解其运行机制的方法。
+
+科学的三个相互关联的重要特征：
+1. 应用系统的实证主意
+2. 产生公共知识
+3. 验证可解决的问题
+
+科学方法不是一套生硬的规则，而是指一些非常普遍的原则，对应科学的三个重要特征：
+1. 科学采用系统的实证主义的研究方法
+2. 它以公开可验证的知识为研究对象
+3. 它研究实证可解的问题，并产生可检验的理论
+
+#### 第二章 可证伪性
+
+科学家们提到“可解决的问题”时，通常指的时“可检验的理论”。“可检验的理论”的定义在科学上是非常明确的：这个理论是有可能被证伪的。
+
+如果一个理论不可证伪，并且和自然界的真实事件没有关联，那么它就是无用的。
+
+科学上的“理论”这一词语，是一组具有内在联系的概念，它们能对一组数据做出解释，并对未来实验的结果做出预测。
+
+“假设”，是从理论中产生的具体预测。
+
+好的理论能够做出具体的预测，具有高度的可证伪性。
+
+可证伪原则的一个含义就是，并非所有理论的验证都具有同样的价值。可证伪性越高，得到证实的理论就越受青睐（越可能正确）。
+
+一个被证伪的预测，说明原有的理论要么应当抛弃，要么需要进行改变以解释这个与预测不一致的数据。
+
+#### 第三章 操作主义和本质主义
+
+“本质主义”认为：从内在本质或者本质属性的角度对现象做出最终解释，才算得上是好的科学理论。
+
+本质主义者的态度通常有一种表现：在探求知识之前，过于关注术语或概念的定义。也就是暗示，本质主义者喜欢咬文嚼字。
+
+在科学领域里，确定某概念的意义，是在与该术语有关的现象得到一定程度的研究之后，而非研究之前。一个精确的概念性术语来自科学过程中固有的那种数据和理论间的相互作用，而不是关于语言用法的辩论。
+
+“操作主义”只是这样一种思想：科学理论里的概念必须立足于可观测事件，或与可观测事件相关联，而这些可观测事件是可以被测量的。
+
+在科学领域里，定义一个概念靠得时一系列操作，而非单独的行为事件。
+
+概念的操作性定义要想有用，必须同时具备“信度”和“效度”。
+
+信度是指测量工具的一致性，是一个必要而非充分的调节（通俗的理解就是，某个测量工具的测量结果你相不相信，或者说多大程度地相信）。
+
+效度是指一个测量工具是否测量了它本应测量的内容（比如用体重称测量智力，这个测量肯定是无效的，也就是这次测量不具有效度）。
+
+不同的操作性定义，只是反映了从不同的角度定义概念的方式，不能说成哪个是对的哪个是错的（例如，对行星这个概念的定义，决定了冥王星是不是行星，这里并没有对与错之分，当然，根据现在的定义，冥王星已经不是行星了）。
+
+心理学中得“预设偏见”（P45）  
+科学家的“节省原则”（P52）
+
+概念有没有直接或间接地建立在可观测操作的基础上，是识别不可证伪的理论的重要线索。
+
+#### 第四章 见证和个案研究证据
+
+心理学消费者应该建立的一个原则：个案研究和见证作为评估心理学理论和治疗的证据是毫无价值的。
+
+个案研究中，没有比较性信息，同时也遗漏了太多其他可能的解释，因此个案研究在研究的后期是毫无作用的。
+
+见证叙述毫无价值，因为无论治疗效果是否有效，人们都会报告某种疗法曾经对他们有所帮助，也就是所说的“安慰剂效应”。
+
+安慰剂效应，使得人们使用价格较贵得安慰剂比价格便宜的安慰剂更能缓解痛苦。
+
+尽管见证证据在检验理论的时候是无用的，但是由于鲜活性效应（对于更为生动、并因此在记忆中更易提取的证据，人们恢复预期过高的权重），这类经常被人们过分地倚重和依赖。
+
+这一整章节用一句话总结，就是： ==事实上，理论主张是否合理，是不能用见证叙述和个案研究的证据来判断的。==
+
+#### 第五章 相关和因果
+
+两个现象有相关关系，并不意味着这两个现象必然有因果关系。
+
+做出因果推论之前，要先解决“第三变量问题”和“方向性问题”。
+
+在第三变量问题里，两个变量之间的相关并不意味着它们之间存在直接因果路径，因为相关的产生可能是由于这两个变量获取都与某个未被测量的第三变量有关。如果潜在的第三变量也经过了测量，就可以用相关统计来评估第三变量是否决定了这种关系。
+
+在方向性问题里，如果两个变量有直接的因果关系，因果关系的方向性是不能根据相关来判断的（即，现象1决定了现象2，还是现象2决定了现象1）。
+
+
+有一个必须考虑的问题就是“虚假相关”:相关的产生不是因为两个变量之间存在一个可以测量的直接的因果联系，而是因为这两个变量都与第三变量相关。
+
+在行为科学中，选择性偏差是造成诸多虚假相关的罪魁祸首。事实上人们在一定程度上选了他们的环境，并人为创造了行为特征和环境变量之间的相关。
+
+#### 第六章 让一切置于控制之下
+
+实验方法的核心就是操纵与控制。
+
+在相关研究中，研究者仅仅观察两个变量的自然变动是否显示某种联系，而在真实验中，研究者要对被假设为原因的变量进行操纵，通过实验控制和随机分配来保持其他所有变量不变，然后来看这个假设变量是否会产生影响。这种方法排除了第三变量的问题。
+
+第三变量出现的原因是，在自然情境下，很多不同的事物都是相互联系的。实验方法就是用来分开考察这些自然存在的关联。它以操纵一个变量（被假设是原因的变量）的方式分离出该变量。并保持其他所有变量不变。
+
+#### 第七章 但是这不是真实的生活
+
+#### 第八章 避免爱因斯坦综合症
+
+科学的两个原则：
+* 关联性原则
+* 聚合性证据原则
+
+科学中的概念变化遵从**关联性原则**，就是说，一个新的科学理论，必须与先前已确立的实证事实建立关联。新的科学理论不仅仅要解释新的事实，还要兼容旧的事实，这样才会被认为是一个真正理论进步。
+
+科学发展的“跃进式”模式 -- 我们可以称之为爱因斯坦综合症 -- 让我们误入歧途，以为新的发现必定违法关联性原则。
+
+聚合性证据原则，描述了心理学上研究结果是如何被整合的：
+没有一个实验是可以一锤定音的，但是每一个实验至少都能帮助我们排除一些可能的解释，并让我们在接近真理的道路上向前迈进。
+
+#### 第九章 打破“神奇的子弹”的神话
+
+人的行为时有多重原因共同决定的。但是人们常常忘记行为是由多重原因决定的，他们似乎要去寻找那颗所谓的“神奇的子弹”--- 即他们感兴趣的、造成行为的唯一原因。
+
+原因多样化的观点下，引出了“交互作用”这个重要的概念：当影响行为的一个因素和另一个因素共同起作用时，他们会对该行为产生与各自单独起作用时截然不同的影响。
+
+考察行为的原因时，要依照多样性的原则来思考。不要陷入误区，认为某一特定行为只是由谬以特殊原因造成。大部分复杂的行为都是有多重原因所决定的。各种各样的因素共同起作用才导致了某种行为的出现。有时多个因素联合在一起时会产生交互作用。也就是说，变量共同作用时的整体效应，会和其单独作用时获得的效应完全不同。
+
+#### 第十章 人类认知的阿喀琉斯之踵
+
+事实上，心理科学所揭示的所有事实和关系，都是用概率来表述的。
+
+一般被用来反驳概率趋势的一个方法就是，“某某人”统计学，即由于某些人知道一个“某某人”与某个成熟的统计学趋势相左，就会怀疑这个趋势。但这是不正确的。
+
+认知错觉：即使人们知道正确答案，他们也会由于问题的问法不同而做出错误的结论。
+
+赌徒谬误：倾向于将过去事件和未来事件之间联系起来，而实际上两者是独立的。两个结果是相互独立的，一个时间的出现不会影响另一事件出现的概率。（例：抛硬币，正反面）
+
+#### 第十一章 偶然性在心理学中扮演的角色
+
+人们有试图解释偶然性事件的倾向，这一现象在心理学的研究中称为**错觉相关**。即使是面对随机事件，人们也倾向于看到他们所期望的联系，他们在原本没有规律的地方看到了规律。
+
+试图解释偶然性事件的倾向可能源于我们深切地渴望相信自己是可以控制这些事件的。这也是人们具有的一种倾向，愿意相信个人能力可以影响偶然事件的结果。这一现象称为**控制错觉**。
+
+巧合只是相关事件偶然地同时出现，巧合并不需要任何解释。
+
+在试图解释世界上发生的所有事，同时又拒绝承认偶然因素的作用，实际上会降低我们对现实世界的预测能力。
+
+以一定的精度预测人类的行为时，有时也需要接受错误以减少错误，也就是说，总依靠一般性的原则来做出比较准确的预测的同时，也要承认我们不可能在每件具体事情上都对。
+
+几十年来，有价值的研究都一直表明：在解释人类行为的原因方面，统计预测（基于群体统计趋势的预测）远远优于临床预测。
+
+#### 第十二章 不招人待见的心理学
+
+ 如何识别伪科学的主张：
+ 
+ *  喜欢采用特殊的假设，使得主张免于被证伪
+ *  强调主张是确证的，是不可辩驳的
+ *  喜欢将提供证据的任务强加给怀疑者，而非拥护者
+ *  过度依赖逸闻趣事和各类见证叙述来证实其主张
+ *  避免同行评审
+ *  并非建立在已有的科学知识之上（缺乏科学关联性）
+
+
+
+
+
 
