--- a/2021/徐远的投资课/01_投资原理.md
+++ b/2021/徐远的投资课/01_投资原理.md
@@ -43,5 +43,13 @@
 | 15% | 40  | 164  | 662 | 11 000 | 718 000 |
 | 20% | 62 | 383  | 2374 | 91 000 | 21 600 000 |
 
-这个表格展示了一个加速原理，就是随着时间变长，基数也变大，财富的增长也变得相对容易了。同样是10%的投资回报率，10万元本金与100万元本金，一年后增长的财富相差10倍。
+这个表格展示了一个加速原理，就是随着时间变长，基数变大，财富的增长也变得相对容易了。同样是10%的投资回报率，10万元本金与100万元本金，一年后的收益相差10倍。
+
+总结一下，为了正确理解回报率，必须牢记它的三个原理：
+
+1. 稳健原理：不赔钱很重要
+2. 几何原理：计算长期收益要用几何均值，算术均值是会骗人的
+3. 时间原理：稳健的收益如果能长期维持，就会创造奇迹
+
+
 
