--- a/2021/徐远的投资课/01_投资原理.md
+++ b/2021/徐远的投资课/01_投资原理.md
@@ -30,8 +30,8 @@
 > 几何平均：回报率累乘之后开方，开方次数等于年数（累乘之前加1，开方之后减1）
 
 通过这个例子，可以得出两个重要的结论：
-- 1.投资中不赔钱很重要，也就是说投资一定要稳健。
-- 2.算术平均（回报率累加之后除以年数）收益是骗人的，不应该以它为收益率计算标准。
+- 投资中不赔钱很重要，也就是说投资一定要稳健。
+- 算术平均（回报率累加之后除以年数）收益是骗人的，不应该以它为收益率计算标准。
 
 再来看一个表格，表格展示的是投资回报率与投资年限的关系，初始本金是10万元，单位是万元
 
@@ -39,7 +39,7 @@
 | ---- | ---- | ----  | ----  | ----  | ----  | 
 | 1% | 11  | 12  | 13 | 16 | 22 |
 | 5% | 16  | 27  | 43 | 115| 496 | 
-| 26| 67  | 20  | 174 | 1 174 | 20 500 |
+| 10% | 26| 67 | 174 | 1 174 | 20 500 |
 | 15% | 40  | 164  | 662 | 11 000 | 718 000 |
 | 20% | 62 | 383  | 2374 | 91 000 | 21 600 000 |
 
