--- a/2021/徐远的投资课/01_投资原理.md
+++ b/2021/徐远的投资课/01_投资原理.md
@@ -1,5 +1,7 @@
 
-### 01_投资原理
+# 01_投资原理
+
+## 回报率
 
 张三和李四都拿出了10万元在做投资，但是他们两人的风格不同。张三很激进，收益动不动就是100%，或者就是-50%。而李四很稳健，每年的收益都在10%左右。
 
@@ -45,11 +47,23 @@
 
 这个表格展示了一个加速原理，就是随着时间变长，基数变大，财富的增长也变得相对容易了。同样是10%的投资回报率，10万元本金与100万元本金，一年后的收益相差10倍。
 
+在投资理财的路上修行，一个是在时间维度上修行，一个是在回报率上修行。在时间这个维度上，如果能够忍受住时间的煎熬，就可以慢慢变富；在回报率上，如果能够不断学习和进步，就可以提高自己的投资回报率，加快变富的速度。
+
+1%的年化回报率，跑不赢通胀，不如存银行。
+
+5%的年化回报率看着很低，其实也不错了，资金越大回报率越低，大资金的投资回报率无限接近于5%。
+
+10%的回报率看起来不起眼，但实际上已经挺高了，7年就能翻一倍。如果觉得10%的回报率也很低的话，回想一下最近这几年的房价上涨的速度，七年前1万一平，现在已经涨到2万一平了，算成回报率的话就是10%。
+
+至于年化收益20%并且持续50年，能做到这一点的只有巴菲特一个人。
+
 总结一下，为了正确理解回报率，必须牢记它的三个原理：
 
 1. 稳健原理：不赔钱很重要
 2. 几何原理：计算长期收益要用几何均值，算术均值是会骗人的
 3. 时间原理：稳健的收益如果能长期维持，就会创造奇迹
+
+## 投资的三大决策
 
 
 
