--- a/2021/徐远的投资课/01_投资原理.md
+++ b/2021/徐远的投资课/01_投资原理.md
@@ -65,5 +65,19 @@
 
 ## 投资的三大决策
 
+投资其实就是解决下面这三个问题
+
+- 买什么？
+- 买多少？
+- 何时买？
+
+### 买什么？
+
+买什么？
+
+肯定是买资产，买那些能给自己带来更高收益、更安全的回报的资产。
+
+所有的资产，都具有两个基本属性，一个是安全性，一个是流动性。
+
 
 
