--- a/2021/徐远的投资课/01_投资原理.md
+++ b/2021/徐远的投资课/01_投资原理.md
@@ -75,9 +75,25 @@
 
 买什么？
 
-肯定是买资产，买那些能给自己带来更高收益、更安全的回报的资产。
+买那些能给自己带来更高收益、更安全的回报的资产。
 
-所有的资产，都具有两个基本属性，一个是安全性，一个是流动性。
+资产，都具有两个基本属性，一个是安全性，一个是流动性。
 
+安全性就是资产有没有风险，根据安全性可以区分出来安全资产和风险资产，银行存款、货币基金、国债是安全资产，股票、房子等是风险资产。
 
+流动性是指把资产变现的容易程度。余额宝的流动性就很好，可以随时变现，几乎实时到账。货币基金、股票、股票基金的流动性就差一点，股票当天卖掉后第二天才能变现，基金赎回的话要3~4天到账，但是这些也都还好，几天内就可以变现。流动性更差的就是房子、古董这类，假设房子值100万，想100万卖掉可能需要几个月时间，除非折价到70万，这时候可能一两周就能卖掉。
+
+关于挑选资产，可以遵循下面两个简单的原则：
+
+- 投资是做自己懂的事情，不懂的，不要碰
+- 对于投资的每一个产品，都要搞清楚两个基本属性，即安全性和流动性
+
+按照资产的安全性和流动性，资产可以以下分类：
+
+|    | 性质 | 代表性资产  |
+| ---- | ---- | ----  | 
+| 第一类 | 无风险、流动性高  | 存款、货币基金、国债 |
+| 第二类 | 有风险、流动性高  | 股票、基金、公司债券、期权、期货 | 
+| 第三类 | 有风险、流动性低 | 房子、古董、字画、钻石 |
+| 第四类 | 无风险、流动性低 | 保险 |
 
