--- a/2021/徐远的投资课/01_投资原理.md
+++ b/2021/徐远的投资课/01_投资原理.md
@@ -97,3 +97,40 @@
 | 第三类 | 有风险、流动性低 | 房子、古董、字画、钻石 |
 | 第四类 | 无风险、流动性低 | 保险 |
 
+
+### 买多少？
+
+买多少不是讨论在单个资产上花多少钱，而是在投资组合中各个资产上配置多少比例，也就是构建稳健的投资组合，实现长期的收益。
+
+构建的投资组合，要同时达到下面三个目标：
+
+- 保持流动性
+  - 留足现金，避免急用钱额时候因为手头没钱而卖掉暂时浮亏的股票，而这些股票很可能在几个月后就会盈利
+- 分散风险
+  - 不要去承担不必要的风险。例如，看好某个行业，买单只股票的风险很大，那么可以通过购买这个行业的ETF基金来分散单只股票的风险，获取这个行业的平均收益。
+- 优化收益
+  - 认真学习，谨慎操作，一点点提高收益率
+
+### 何时买？
+
+何时买？是最难决策的一个问题。
+
+虽然长期看投资A股是挣钱的，但如果买在了泡沫顶部就会赔钱，而且可能很多年都不能回本。
+
+投资择时的基本思路，是根据经济理论、历史经验、政策逻辑，预判资产价格的涨跌，事先买入将会上涨的资产。
+
+投资择时的一个基本分析框架，是美林时钟理论，这个理论根据经济周期和政策变化，预判债券、股票、大宗商品的价格变化。
+
+美林时钟的四个经济周期阶段
+
+|  -  | 低迷（刺激） | 复苏 | 过热（紧缩）  | 滞胀 |
+| ---- | ---- | ----  | ----  | ----   | 
+| 经济增速 | 低  | 回升 | 高 | 回落 |
+| 通货膨胀 | 低 | 低  | 高 | 高 | 
+| 政策特征 | 刺激 | - | 紧缩 | -  |
+| 资产选择 | 债券  | 股票 | 大宗商品 | 现金 |
+
+
+
+
+
