--- a/2021/徐远的投资课/01_投资原理.md
+++ b/2021/徐远的投资课/01_投资原理.md
@@ -109,7 +109,7 @@
 - 分散风险
   - 不要去承担不必要的风险。例如，看好某个行业，买单只股票的风险很大，那么可以通过购买这个行业的ETF基金来分散单只股票的风险，获取这个行业的平均收益。
 - 优化收益
-  - 认真学习，谨慎操作，一点点提高收益率
+  - 认真学习，谨慎操作，一点点提高投资组合的收益率
 
 ### 何时买？
 
