--- a/2021/徐远的投资课/01_投资原理.md
+++ b/2021/徐远的投资课/01_投资原理.md
@@ -121,6 +121,11 @@
 
 投资择时的一个基本分析框架，是美林时钟理论，这个理论根据经济周期和政策变化，预判债券、股票、大宗商品的价格变化。
 
+
+美林时钟理论的经济运行周期
+
+![美林时钟理论的经济运行周期](/images/2021-12-04-09-12-43.png)
+
 美林时钟的四个经济周期阶段
 
 |  -  | 低迷（刺激） | 复苏 | 过热（紧缩）  | 滞胀 |
