--- a/2021/徐远的投资课/03_债券.md
+++ b/2021/徐远的投资课/03_债券.md
@@ -14,11 +14,13 @@
 - 第二个条件是债券不会违约，也就是说发行人有能力还钱。
   - 如果发行人经营不善，没钱还你，钱就回不来了。这个风险叫作**信用风险**。
 
-根据违约风险，可以把债券分为利率债和信用债。利率债（如国债、政策性金融债等）是政府发行的，或者政府担保的，不会发生违约，因此只有利率风险，没有信用风险。信用债（如企业债、公司债）是公司发行的，公司可能会违约甚至破产，因此有信用风险。
+根据违约风险，可以把债券分为利率债和信用债。利率债只有利率风险，没有信用风险。信用债既有利率风险，也有信用风险。
+
+利率债（如国债、政策性金融债等）是政府发行的，或者政府担保的，不会发生违约，因此只有利率风险，没有信用风险。信用债（如企业债、公司债）是公司发行的，公司可能会违约甚至破产，因此有信用风险。
 
 ## 什么样的人适合投资债券？
 
-债券有三个重要的性质：
+债券有三个优点：
 - 债券是相对安全的金融产品，偶尔会有损失，但是不会太大。
 - 债券的回报率虽然不高，但是依然很可观，利率债的回报大约是4%，信用债大约5~6%。
 - 债券和股票有互补关系。在经济周期中，股票和债券的价格是轮动的，有时候股票不涨或者下跌，但是这时候债券会涨得很快。
@@ -31,3 +33,10 @@
 - 高净值人群
   - 有上亿的流动资产，对于财务增长的追求不是首要考虑了，首要的考虑是资产的安全，并带来稳定的现金流。5%的收益，就是500万的净现金流。
 
+## 如何投资债券
+
+投资债券，有三种方式：直接买、买债券类型的基金、买国债期货。
+
+直接买债券的缺点很多，包括限制多、流动性差，以及存在违约风险，买债券基金可以帮助规避这些问题。
+
+普通人的选择最好就是买债券类型的基金，债券基金回报率差异不大，选择规模较大、流动性好的基金即可。
