--- a/2021/徐远的投资课/03_债券.md
+++ b/2021/徐远的投资课/03_债券.md
@@ -1,7 +1,7 @@
 
 # 03_债券
 
-债券的原理很简单，就是债券发行人（比如政府或者企业），需要资金，就跟你借，然后达哥借条，借条上说明本金、利息、期限、还款计划等。这个借条，就是债券。
+债券的原理很简单，就是债券发行人（比如政府或者企业），需要资金，就跟你借，然后打个借条，借条上说明本金、利息、期限、还款计划等。这个借条，就是债券。
 
 债券是最重要的金融工具之一，体量比股票还大，对于构建投资组合很重要。
 
