--- a/2021/徐远的投资课/04_基金.md
+++ b/2021/徐远的投资课/04_基金.md
@@ -33,6 +33,8 @@
   - 股基有很大风险，赔钱的时候可能会赔一半多。
 - 混合型基金
   - 就是对于投资标的没有硬性规定，配置的范围可以是货币、债券和股票。
+- 其他基金
+  - 黄金基金、商品基金、投资境外资产的QDII基金
 
 根据管理风格，可以分为：
 - 主动管理型
