--- a/2021/徐远的投资课/04_基金.md
+++ b/2021/徐远的投资课/04_基金.md
@@ -50,4 +50,16 @@
   - 公开，任何人都可以购买
   - 认购门槛低，100元就可以购买
 
+## 如何挑选基金
 
+挑选基金的五个要素：
+
+- 基金业绩（业绩好坏和稳定性）
+  - 看历史业绩，选择过去3~5年很稳健的基金
+    - 基金稳健程度的2个指标（夏普比率是越大越好，最大回撤是越小越好。）
+      - 夏普比率（简单说就是回报和风险的比率）
+      - 最大回撤（买入基金后可能面临的最大亏损幅度）
+- 基金经理（业绩和服务年限）
+- 基金公司
+- 基金鬼灭
+- 机构持仓
