--- a/2021/徐远的投资课/04_基金.md
+++ b/2021/徐远的投资课/04_基金.md
@@ -60,6 +60,24 @@
       - 夏普比率（简单说就是回报和风险的比率）
       - 最大回撤（买入基金后可能面临的最大亏损幅度）
 - 基金经理（业绩和服务年限）
+  - 看他这个人的历史业绩和从业年限
+    - 近3年里，保持在同类基金的前1/3
+    - 从业年限越高，说明基金经理越有经验
 - 基金公司
-- 基金鬼灭
+  - 长期看，好的基金公司内部管理完善，业绩比较好，规模也会慢慢变大，良性循环。
+- 基金规模
+  - 单个基金的规模很大，会相应配置好的基金经理和管理团队，管理比较规范
+  - 会相应配置好的基金经理和管理团队，管理比较规范
 - 机构持仓
+  - 机构持仓比例太低，比如低于20%，这样的基金不太好，回报率不高，而且回撤比较大
+  - 机构持仓比例太高，比如超过60%也不太好
+  - 机构持仓适中，比如在20%~60%之间的基金，会比较好
+
+## 基金管理费
+
+投资基金的6种费用：
+
+|  分类  | 特点  | 主要项目 |
+| ---- |  ----  | --- |
+| 运作费用 | 每年收费、逐日计算  | 管理费（股票基金平均1.46%）、托管费（股票基金平均0.25%）、销售服务费（股票基金平均0.54%） |
+| 交易费用 | 买基金时一次性收费  | 认购费（通常1%）、申购费（最高1.5%）、赎回费（最高1.5%） |
