--- a/2021/徐远的投资课/04_基金.md
+++ b/2021/徐远的投资课/04_基金.md
@@ -81,3 +81,12 @@
 | ---- |  ----  | --- |
 | 运作费用 | 每年收费、逐日计算  | 管理费（股票基金平均1.46%）、托管费（股票基金平均0.25%）、销售服务费（股票基金平均0.54%） |
 | 交易费用 | 买基金时一次性收费  | 认购费（通常1%）、申购费（最高1.5%）、赎回费（最高1.5%） |
+
+在公募基金中的管理费用：
+- 股票型基金
+  - 主动型的平均管理费率为1.46%
+  - 被动指数型平均为0.66%
+- 混合型基金，比主动型基金低，比被动指数型基金高
+- 债券型基金的管理费率平均数为0.42%
+- 货币基金的管理费率平均为0.26%
+
