--- a/2021/徐远的投资课/04_基金.md
+++ b/2021/徐远的投资课/04_基金.md
@@ -90,3 +90,26 @@
 - 债券型基金的管理费率平均数为0.42%
 - 货币基金的管理费率平均为0.26%
 
+基金托管费：
+- 支付给基金托管人（一般为商业银行）的费用，用来保管和处置基金资产
+- 主动型股票每年0.25%
+- 债券型基金每年0.12%
+- 货币型基金每年0.07%
+
+销售服务费：
+- 支付给销售机构的佣金、基金营销费用
+
+申购费：
+- 投资者在申购基金时，向基金公司一次性支付的手续费
+  - 前端收费：购买基金时就支付申购费
+  - 后端收费：投资者在购买基金时并不付钱，等到卖出时才付申购费
+
+认购费：
+- 在基金发行募集期内购买基金时所缴纳的手续费
+
+赎回费：
+- 投资者赎回基金份额时，需要支付的手续费
+- 对于持有期低于7日的投资者，除货币基金和ETF之外的所有基金都必须收取不低于1.5%的赎回费
+
+
+
