--- a/2021/徐远的投资课/04_基金.md
+++ b/2021/徐远的投资课/04_基金.md
@@ -61,13 +61,14 @@
       - 最大回撤（买入基金后可能面临的最大亏损幅度）
 - 基金经理（业绩和服务年限）
   - 看他这个人的历史业绩和从业年限
-    - 近3年里，保持在同类基金的前1/3
-    - 从业年限越高，说明基金经理越有经验
+    - 历史业绩长期稳健的，可以选近3年里保持在同类基金的前1/3
+    - 从业年限越高，说明基金经理越有经验，选6~8年的
 - 基金公司
   - 长期看，好的基金公司内部管理完善，业绩比较好，规模也会慢慢变大，良性循环。
+  - 选资产规模大、口碑好的基金公司
 - 基金规模
   - 单个基金的规模很大，会相应配置好的基金经理和管理团队，管理比较规范
-  - 会相应配置好的基金经理和管理团队，管理比较规范
+  - 同一个基金公司，最好选它的旗舰基金
 - 机构持仓
   - 机构持仓比例太低，比如低于20%，这样的基金不太好，回报率不高，而且回撤比较大
   - 机构持仓比例太高，比如超过60%也不太好
