--- a/2021/徐远的投资课/02_股票.md
+++ b/2021/徐远的投资课/02_股票.md
@@ -33,6 +33,8 @@
 
 如果一个公司业绩的年均增速是10%，那么合理的市盈率应该是10倍左右，如果年均增速是20%，那么合理的市盈率应该是20倍左右。
 
+> 李大仁剖析室：一般而言，盈利长期保持10%的增速，合理市盈率为20倍左右；盈利长期保持20%的增速，合理市盈率为30倍左右。
+
 最后，不能用简单的估值水平来挑选股票，估值只是一个参考。
 
 > 凭普通人的智商、精力以及分析财报的能力，根本没法搞懂一只股票的基本面。所以，普通人不配持有任何一只股票。
